fix for collapsed menu position

--- a/grid-parts/styles/navigation/styles-collapsed.scss
+++ b/grid-parts/styles/navigation/styles-collapsed.scss
@@ -7,7 +7,8 @@
 	.gridd-nav-horizontal {
 		display: none;
 		position: absolute;
-		transform: translateY(calc(50% + 1.5em + 2px));
+		bottom: 0;
+		transform: translateY(100%);
 		background-color: var(--gridd-nav-ID-bg);
 		box-shadow: 0 0 5px 0 rgba(0, 0, 0, .16);
 		width: 15em;
